# fip-100-dashboard

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
dashboard/: astro.config.mjs  package-lock.json  package.json
dashboard/src/components/: LineChart.astro
dashboard/src/pages/: index.astro
datasets/: participating_miner_count.py  power_added.py  precommit_sector_batch_size.py
src/components/: LineChart.astro
src/fip_100_dashboard/: __init__.py
src/pages/: index.astro
