[project]
name = "fip-100-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Gasquez", email = "davidgasquez@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
fip-100-dashboard = "fip_100_dashboard:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
