[project]
name = "fip-100-dashboard"
version = "0.1.0"
description = "Data and charts to track FIP 100 real-world network behavior"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["google-cloud-bigquery[bqstorage]>=3.38.0", "polars>=1.35.1"]
